Clip dragged images before calling CreateDragImageForFrame.

Also, pass the paint offset independently of the bounds.
The two callsites of CreateDragImageForFrame paint in different
coordinate spaces. Also, the callsite in DragController is already
clipping.

This fixes two issues: that the bounds rect did not match the
coordinate space of the clip applied in CreateDragImageForFrame,
and that the coordinate space is not necessarily the LayoutView.

Bug: 798182
Change-Id: Ie792095806613cd1e6238bbb0d1b8335350ede01
Reviewed-on: https://chromium-review.googlesource.com/848499
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526835}
Former-commit-id: 16b3d20c33f49cc89d8f0b0c62cf93fde4675407